--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,26 +6,17 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="hotelClick"
-        android:text="Hotels" />
 
-    <Button
+    <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="malls"
-        android:onClick="malls"/>
-    <Button
+        android:id="@+id/tab_layout"
+        android:minHeight="?attr/actionBarSize"></android.support.design.widget.TabLayout>
+
+    <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="night places"
-        android:onClick="night"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="places"
-        android:text="places"/>
+        android:id="@+id/pager"
+        android:layout_height="match_parent" />
+
 
 </LinearLayout>
